Use the same shell html file for all deqp modules

--- a/emscripten/shell.html
+++ b/emscripten/shell.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>dEQP texts suite</title>
+    <title>dEQP test suite</title>
   </head>
   <body>
     <canvas class="emscripten" id="canvas" style="padding-right: 0; margin-left: auto; margin-right: auto; display: block;"></canvas>
